--- a/starwars-api/src/main/resources/application-dev.properties
+++ b/starwars-api/src/main/resources/application-dev.properties
@@ -1,15 +1,11 @@
-
-spring.application.name=starwars-api
-spring.profiles.active=dev
-
-spring.datasource.url=jdbc:postgresql://db:5432/starwars
+spring.datasource.url=jdbc:postgresql://localhost:5432/starwars
 spring.datasource.username=user
 spring.datasource.password=Abc123..
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.initialization-fail-timeout=60000
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
