--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - "8080:8080"
     networks:
       - starwars-network
+    depends_on:
+      - db
+    restart: on-failure
 
   frontend:
     build: ./starwars-ui
@@ -18,6 +21,19 @@ services:
       - starwars-network
     depends_on:
       - backend
+
+  db:
+    image: postgres:15
+    container_name: starwars-db
+    restart: always
+    environment:
+      POSTGRES_DB: starwars
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: Abc123..
+    ports:
+      - "5432:5432"
+    networks:
+      - starwars-network
 
 networks:
   starwars-network:
