--- a/starwars-ui/package.json
+++ b/starwars-ui/package.json
@@ -26,7 +26,9 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ng-select/ng-select": "^20.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
