--- a/starwars-api/src/main/resources/application-dev.properties
+++ b/starwars-api/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/starwars
 spring.datasource.username=user
 spring.datasource.password=Abc123..
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.profiles.active=dev
 spring.datasource.hikari.initialization-fail-timeout=60000
 
 spring.jpa.hibernate.ddl-auto=update
