--- a/starwars-api/src/main/resources/application.properties
+++ b/starwars-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.application.name=starwars-api
 
 spring.datasource.url=jdbc:postgresql://db:5432/starwars
@@ -7,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.initialization-fail-timeout=60000
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
