--- a/starwars-api/src/main/resources/application.properties
+++ b/starwars-api/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.initialization-fail-timeout=60000
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
